--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,10 @@ layout: page
 
 <section class="aboutme post_content">
     <p>
-        If you don't need 'about' page, edit the _config.yml to comment out the code.
+        你是莉莉安，还是董小姐。
+        联系方式：709891374[#]qq.com
+        My name is 南方有梦
         <br><br>
-        <img src="https://starry99.github.io/catbook/assets/img/cat1.jpg">
+        <img src="https://hackgov.github.io/assets/img/cat1.jpg">
     </p>
 </section>
