--- a/aboutme.html
+++ b/aboutme.html
@@ -4,9 +4,9 @@ layout: page
 
 <section class="aboutme post_content">
     <p>
-        你是莉莉安，还是董小姐。
+        你是莉莉安，还是董小姐。</b>
         联系方式：709891374[#]qq.com
-        My name is 南方有梦
+
         <br><br>
         <img src="https://hackgov.github.io/assets/img/cat1.jpg">
     </p>
