--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@ layout: page
 
 <section class="aboutme post_content">
     <p>
-        你是莉莉安，还是董小姐。</b>
+        你是莉莉安，还是董小姐。</br>
         联系方式：709891374[#]qq.com
 
         <br><br>
